--- a/itgm8/itgm.html
+++ b/itgm8/itgm.html
@@ -65,25 +65,6 @@ location:
                         <a class="button button-small button-line-light html-popup" href="register.html">зарегистрироваться</a>
                     </div>
                 </div>
-                <!-- <div class="row">
-                    <div class="col-md-12">
-                        <p>Поделиться: </p>
-                        <div class="share-btns">
-                            <div class="ya-share2"
-                                 data-services="vkontakte,facebook,gplus,linkedin,twitter"
-                                 data-counter
-                                 data-image="http://piter-united.ru/itgm8/img/site_logo/itgm_logo2.png"
-                                 data-lang="ru"
-                                 counter="true"
-                                 data-size="s"
-                                 data-title="IT Global Meetup #8"
-                                 data-description="23 июля 2016, с 11.00 до 18.00. 8-й слет ИТ-сообществ Санкт-Петербурга. КДЦ Club House - СПб, пр. Медиков 3."
-                                 data-url="http://piter-united.ru/itgm8/itgm.html"></div>
-
-                                 <iframe src="https://piter-united.herokuapp.com/iframe" class="__slackin slack" style="border-width: 0px; width: 108px; height: 27px; visibility: visible;"></iframe>
-                         </div>
-                    </div>
-                </div> -->
             </div>
         </div>
         <div class="row visible-md-block visible-lg-block">
@@ -107,57 +88,6 @@ location:
         </div>
     </div>
 </div>
-
-
-
-
-<!-- FULLSCREEN SLIDER -->
-<!-- <div class="tp-banner-container">
-  <div class="tp-banner">
-    <ul>
-      <li data-transition="slidevertical" data-slotamount="1" data-masterspeed="1000" data-thumb="img/slide_thumb_1.jpg"  data-saveperformance="off"  data-title="Slide">
-          <img src="img/texture4_.jpg"  alt="fullslide1"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-          <div style="z-index: 3;">
-            <h1> IT Global Meetup 7</h1>
-            <p>Test</p>
-            <a class="button button-small button-line-light html-popup" href="register.html">register now</a>
-          </div>
-          <div class="tp-caption light_heavy_70_shadowed lfb ltt tp-resizeme"
-              data-x="center" data-hoffset="250"
-              data-y="center" data-voffset="-70"
-              data-speed="600"
-              data-start="800"
-              data-easing="Power4.easeOut"
-              data-splitin="none"
-              data-splitout="none"
-              data-elementdelay="0.01"
-              data-endelementdelay="0.1"
-              data-endspeed="500"
-              data-endeasing="Power4.easeIn"
-              style="z-index: 2; max-width: auto; max-height: auto; white-space: nowrap;">IT Global Meetup #7
-          </div>
-
-          <div class="tp-caption light_medium_30_shadowed lfb ltt tp-resizeme"
-              data-x="center" data-hoffset="240"
-              data-y="center" data-voffset="10"
-              data-speed="600"
-              data-start="900"
-              data-easing="Power4.easeOut"
-              data-splitin="none"
-              data-splitout="none"
-              data-elementdelay="0.01"
-              data-endelementdelay="0.1"
-              data-endspeed="500"
-              data-endeasing="Power4.easeIn"
-              style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;"> <strong>02 апреля 2016</strong> в Санкт-Петербурге. <br> пр. Медиков д.3 корп.1, КДЦ "Club House".
-              <br>
-              <a class="button button-small button-line-light html-popup" href="register.html">register now</a>
-          </div>
-      </li>
-    </ul>
-    <div class="tp-bannertimer"></div>
-  </div>
-</div> -->
 
 <!-- INFO -->
 <section id="info">
@@ -252,15 +182,6 @@ location:
     </div>
 </section>
 
-
-
-
-<!-- Promo Video -->
-<!-- <iframe src="https://player.vimeo.com/video/138511320?title=0&byline=0&portrait=0" width="100%" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
-
-
-
-
 <!-- COMMUNITIES -->
 <section id="communities">
     <div class="container">
@@ -273,7 +194,6 @@ location:
 
             <ul id="list-speaker" class="list-unstyled">
                 {% for community in site.data.itgm8_communities %}
-
                 <a href="{{ community.link }}" target="_blank">
                     <li class="col-lg-3 col-md-3 col-sm-4">
                         <div class="speaker">
@@ -284,32 +204,8 @@ location:
                         </div>
                     </li>
                 </a>
-
                 {% endfor %}
-
-                <!-- SPEAKER 1 -->
-                <!-- <li class="col-lg-3 col-md-3 col-sm-4">
-                    <div class="speaker">
-                        <figure class="effect-ming">
-                            <img class="img-responsive" src="img/speaker1.png" alt=""/>
-                            <figcaption>
-                                <span><a class="html-popup" href="speaker-detail.html"><img class="img-responsive" src="img/plus.png" alt=""></a></span>
-                            </figcaption>
-                        </figure>
-
-                        <div class="caption text-center">
-                            <h4>Stanley Willis</h4>
-                            <p class="community">Fermentum Co.</p>
-                        </div>
-                    </div>
-                </li> -->
-
             </ul>
-
-            <!-- <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-              <a id="loadmore" class="button button-small button-line-dark">load more</a>
-            </div> -->
-
         </div>
     </div>
 </section>
@@ -597,36 +493,35 @@ location:
 
 <!-- Footer -->
 <section id="footer">
-<div id="footer" class="container" >
-    <div class="row">
-        <div class="col-lg-5">
-            <div class="text-left">
-                <div class="header">Предыдущие мероприятия</div>
-            <div class="content">
-                {% for itgm in site.data.itgm_list %}
-                <a class="ui label" href="{{itgm.link}}">{{itgm.name}}</a>
-                {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="text-left">
+                    <div class="header">Предыдущие мероприятия</div>
+                    <div class="content">
+                        {% for itgm in site.data.itgm_list %}
+                        <a class="ui label" href="{{itgm.link}}">{{itgm.name}}</a>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <p class="text-center"><b>PiterUnited@gmail.com</b></p>
+            </div>
+            <div class="col-lg-5">
+                <div class="text-right">
+                    <div class="header">Мы в социальных сетях</div>
+                    <div class="content">
+                        <a class="ui label" href="https://plus.google.com/u/0/communities/108851235934496354072" target="_blank"><i class="large google plus icon"></i></a>
+                        <a class="ui label" href="https://twitter.com/piter_united" target="_blank"><i class="large twitter icon"></i></a>
+                        <a class="ui label" href="https://medium.com/@piterunited" target="_blank"><i class="large medium icon"></i></a>
+                        <a class="ui label" href="https://www.facebook.com/groups/piterunited/" target="_blank"><i class="large facebook icon"></i></a>
+                        <a class="ui label" href="https://vk.com/piterunited" target="_blank"><i class="large vk icon"></i></a>
+                        <a class="ui label" href="https://www.linkedin.com/grp/home?gid=8117058" target="_blank"><i class="large linkedin icon"></i></a>
+                    </div>
+                </div>
             </div>
         </div>
-        </div>
-        <div class="col-lg-2">
-            <p class="text-center"><b>PiterUnited@gmail.com</b></p>
-            <!--<a class="link" href="http://piter-united.ru/main.html" target="_blank">IT-сообщества Санкт-Петербурга</a>-->
-        </div>
-        <div class="col-lg-5">
-            <div class="text-right">
-                <div class="header">Мы в социальных сетях</div>
-            <div class="content">
-                <a class="ui label" href="https://plus.google.com/u/0/communities/108851235934496354072" target="_blank"><i class="large google plus icon"></i></a>
-                <a class="ui label" href="https://twitter.com/piter_united" target="_blank"><i class="large twitter icon"></i></a>
-                <a class="ui label" href="https://medium.com/@piterunited" target="_blank"><i class="large medium icon"></i></a>
-                <a class="ui label" href="https://www.facebook.com/groups/piterunited/" target="_blank"><i class="large facebook icon"></i></a>
-                <a class="ui label" href="https://vk.com/piterunited" target="_blank"><i class="large vk icon"></i></a>
-                <a class="ui label" href="https://www.linkedin.com/grp/home?gid=8117058" target="_blank"><i class="large linkedin icon"></i></a>
-            </div>
-        </div>
-
     </div>
-</div>
 </section>
 <!--endof Footer -->
